infra/k8s/clusters/linkerd/feed/authz-policy-probes.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: allow-probes-to-feed
  namespace: tomsblog
  labels:
    app: feed
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: feed-http
  requiredAuthenticationRefs:
    - name: kubelet-probes-feed
      kind: NetworkAuthentication
      group: policy.linkerd.io
